--- a/Hotel_Administration2.0/migrants.xaml
+++ b/Hotel_Administration2.0/migrants.xaml
@@ -4,9 +4,46 @@
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:Hotel_Administration2._0"
+      xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
       mc:Ignorable="d" 
       Title="migrants">
-    <Grid>
-        
+    <Grid x:Name="vselenie_page" 
+          Background="#ffdadada">
+        <Border MinWidth="200" 
+                Margin="15" 
+                Background="White" 
+                VerticalAlignment="Center" 
+                Padding="20" 
+                CornerRadius="20">
+            <Border.Effect>
+                <DropShadowEffect BlurRadius="60" 
+                                  Color="LightGray" 
+                                  ShadowDepth="0"/>
+            </Border.Effect>
+            <StackPanel>
+                <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
+                    <DatePicker x:Name="dataZaezda"
+                                materialDesign:HintAssist.Hint="Дата начала формирования отчёта"
+                                Style="{StaticResource MaterialDesignFloatingHintDatePicker}"
+                                SelectedDateChanged="Filter" 
+                                Margin="0,0,10,0"
+                    />
+                    <DatePicker x:Name="dataViezda"
+                                materialDesign:HintAssist.Hint="Дата окончания формирования отчёта"
+                                SelectedDateChanged="Filter" 
+                                Style="{StaticResource MaterialDesignFloatingHintDatePicker}"
+                    />
+                </StackPanel>
+                <DataGrid x:Name="migrantsKlienti"
+                          MinWidth="400"
+                          Height="200"
+                          Margin="0,10"
+                          Style="{StaticResource MaterialDesignDataGrid}"
+                />
+                <Button x:Name="print"
+                        Content="Печать"
+                        Click="Print_OnClick"/>
+            </StackPanel>
+        </Border>
     </Grid>
 </Page>
