--- a/Hotel_Administration2.0/postklients.xaml
+++ b/Hotel_Administration2.0/postklients.xaml
@@ -3,11 +3,48 @@
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+      xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
       xmlns:local="clr-namespace:Hotel_Administration2._0"
       mc:Ignorable="d" 
-      Title="postklients">
-
-    <Grid>
-        
+      Title="postklients"
+      Loaded="Postklients_OnLoaded">
+    <Grid x:Name="vselenie_page" 
+          Background="#ffdadada">
+        <Border MinWidth="200" 
+                Margin="15" 
+                Background="White" 
+                VerticalAlignment="Center" 
+                Padding="20" 
+                CornerRadius="20">
+            <Border.Effect>
+                <DropShadowEffect BlurRadius="60" 
+                                      Color="LightGray" 
+                                      ShadowDepth="0"/>
+            </Border.Effect>
+            <StackPanel>
+                <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
+                <DatePicker x:Name="dataDogovora_Start"
+                            materialDesign:HintAssist.Hint="Дата начала формирования отчёта"
+                            Style="{StaticResource MaterialDesignFloatingHintDatePicker}"
+                            SelectedDateChanged="Filter" 
+                            Margin="0,0,10,0"
+                />
+                <DatePicker x:Name="dataDogovora_End"
+                            materialDesign:HintAssist.Hint="Дата окончания формирования отчёта"
+                            SelectedDateChanged="Filter" 
+                            Style="{StaticResource MaterialDesignFloatingHintDatePicker}"
+                />
+                </StackPanel>
+                <DataGrid x:Name="postoyannieKlienti"
+                          MinWidth="400"
+                          Height="200"
+                          Margin="0,10"
+                          Style="{StaticResource MaterialDesignDataGrid}"
+                          />
+                <Button x:Name="print"
+                        Content="Печать"
+                        Click="Print_OnClick"/>
+            </StackPanel>
+        </Border>
     </Grid>
 </Page>
