Удаление подключения ненужных библиотек и добавление установщика

--- a/Hotel_Administration2.0/admin.xaml
+++ b/Hotel_Administration2.0/admin.xaml
@@ -6,7 +6,7 @@
         mc:Ignorable="d"
         Title="Администратор" 
         SizeToContent="WidthAndHeight"
-        ResizeMode="NoResize">
+        ResizeMode="NoResize" Icon="icon.png">
     <Grid Background="#ffdadada">
         <Menu Style="{StaticResource MaterialDesignMenu}" 
               Height="{DynamicResource {x:Static SystemParameters.MenuHeightKey}}" 
